--- a/packages/@aws-cdk/aws-codestarnotifications-targets/package.json
+++ b/packages/@aws-cdk/aws-codestarnotifications-targets/package.json
@@ -64,6 +64,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@aws-cdk/assert": "0.0.0",
+    "@aws-cdk/aws-codebuild": "0.0.0",
     "cdk-build-tools": "0.0.0",
     "cdk-integ-tools": "0.0.0",
     "pkglint": "0.0.0"
@@ -82,6 +83,10 @@
     "@aws-cdk/aws-sns": "0.0.0",
     "@aws-cdk/aws-iam": "0.0.0",
     "@aws-cdk/aws-chatbot": "0.0.0",
+    "@aws-cdk/aws-codecommit": "0.0.0",
+    "@aws-cdk/aws-codebuild": "0.0.0",
+    "@aws-cdk/aws-codepipeline": "0.0.0",
+    "@aws-cdk/aws-codedeploy": "0.0.0",
     "constructs": "^3.0.4"
   },
   "engines": {
