--- a/packages/@aws-cdk/aws-cloudfront/package.json
+++ b/packages/@aws-cdk/aws-cloudfront/package.json
@@ -106,7 +106,7 @@
   "features": [
     {
       "name": "Higher level constructs for Distribution",
-      "stability": "Experimental"
+      "stability": "Developer Preview"
     },
     {
       "name": "Higher level constructs for CloudFrontWebDistribution",
