--- a/packages/@aws-cdk/aws-codestarnotifications-source/package.json
+++ b/packages/@aws-cdk/aws-codestarnotifications-source/package.json
@@ -23,7 +23,11 @@
       },
       "python": {
         "distName": "aws-cdk.aws-codestarnotifications-source",
-        "module": "aws_cdk.aws_codestarnotifications_source"
+        "module": "aws_cdk.aws_codestarnotifications_source",
+        "classifiers": [
+          "Framework :: AWS CDK",
+          "Framework :: AWS CDK :: 1"
+        ]
       }
     },
     "projectReferences": true
