--- a/packages/@aws-cdk/aws-codestarnotifications-targets/package.json
+++ b/packages/@aws-cdk/aws-codestarnotifications-targets/package.json
@@ -23,7 +23,11 @@
       },
       "python": {
         "distName": "aws-cdk.aws-codestarnotifications-targets",
-        "module": "aws_cdk.aws_codestarnotifications_targets"
+        "module": "aws_cdk.aws_codestarnotifications_targets",
+        "classifiers": [
+          "Framework :: AWS CDK",
+          "Framework :: AWS CDK :: 1"
+        ]
       }
     },
     "projectReferences": true
