--- a/.github/workflows/auto-approve-v2-merge-forward.yml
+++ b/.github/workflows/auto-approve-v2-merge-forward.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: hmarr/auto-approve-action@7782c7e2bdf62b4d79bdcded8332808fd2f179cd
+    - uses: hmarr/auto-approve-action@v2.0.0
       if: >
         github.event.pull_request.user.login == 'aws-cdk-automation'
         && github.event.pull_request.base.ref == 'v2-main'
