--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -18,7 +18,7 @@ phases:
       - /bin/bash ./fetch-dotnet-snk.sh
   build:
     commands:
-      - /bin/bash ./scripts/bump-candidate.sh
+      - if ${BUMP_CANDIDATE:-false}; then /bin/bash ./bump-candidate.sh; fi
       - /bin/bash ./scripts/align-version.sh
       - /bin/bash ./build.sh
   post_build:
