--- a/.github/workflows/auto-approve-v2-merge-forward.yml
+++ b/.github/workflows/auto-approve-v2-merge-forward.yml
@@ -1,11 +1,18 @@
 # Automatically approve PRs that merge master forward to v2-main
 #
 # Only does approvals! mergify takes care of the actual merge.
-name: Auto-approve Dependabot
+name: Auto-approve forward merges onto v2-main
 on:
   pull_request:
     types:
+      - labeled
       - opened
+      - ready_for_review
+      - reopened
+      - synchronize
+      - unlabeled
+      - unlocked
+
 jobs:
   build:
     runs-on: ubuntu-latest
