--- a/packages/@monocdk-experiment/assert/package.json
+++ b/packages/@monocdk-experiment/assert/package.json
@@ -12,11 +12,13 @@
     "pkglint": "pkglint -f",
     "package": "cdk-package",
     "build+test+package": "npm run build+test && npm run package",
-    "build+test": "npm run build && npm test",
-    "gen": "./clone.sh"
+    "build+test": "npm run build && npm test"
   },
   "cdk-build": {
     "jest": true,
+    "pre": [
+     "./clone.sh"
+    ],
     "eslint": {
       "disable": true
     },
