--- a/packages/@aws-cdk/aws-eks/package.json
+++ b/packages/@aws-cdk/aws-eks/package.json
@@ -71,6 +71,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@aws-cdk/assert": "0.0.0",
+    "@aws-cdk/aws-ek8s": "0.0.0",
     "@types/nodeunit": "^0.0.31",
     "@types/yaml": "1.9.6",
     "aws-sdk": "^2.739.0",
@@ -79,8 +80,7 @@
     "cfn2ts": "0.0.0",
     "nodeunit": "^0.11.3",
     "pkglint": "0.0.0",
-    "sinon": "^9.1.0",
-    "cdk8s-plus": "^0.29.0"
+    "sinon": "^9.1.0"
   },
   "dependencies": {
     "@aws-cdk/aws-autoscaling": "0.0.0",
@@ -91,7 +91,6 @@
     "@aws-cdk/aws-ssm": "0.0.0",
     "@aws-cdk/core": "0.0.0",
     "@aws-cdk/custom-resources": "0.0.0",
-    "cdk8s": "^0.30.0",
     "constructs": "^3.0.4",
     "yaml": "1.10.0"
   },
@@ -108,7 +107,6 @@
     "@aws-cdk/aws-ssm": "0.0.0",
     "@aws-cdk/core": "0.0.0",
     "@aws-cdk/custom-resources": "0.0.0",
-    "cdk8s": "^0.30.0",
     "constructs": "^3.0.4"
   },
   "engines": {
